fix:dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .svg-colored {
+    filter: invert(99%) sepia(2%) saturate(21%) hue-rotate(330deg) brightness(106%) contrast(100%);
+  }
+}
 /* @font-face { */
 /*     font-family: 'Lekton', sans-serif; */
 /*   font-style: normal; */
